; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/math/extr_j0_y0.c__j0.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/math/extr_j0_y0.c__j0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EDOM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @_j0(double %0) #0 {
  %2 = alloca double, align 8
  store double %0, double* %2, align 8
  %3 = load double, double* %2, align 8
  %4 = call i32 @_finite(double %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @EDOM, align 4
  %8 = call i32* (...) @_errno()
  store i32 %7, i32* %8, align 4
  br label %9

9:                                                ; preds = %6, %1
  %10 = load double, double* %2, align 8
  %11 = call double @__ieee754_j0(double %10)
  ret double %11
}

declare dso_local i32 @_finite(double) #1

declare dso_local i32* @_errno(...) #1

declare dso_local double @__ieee754_j0(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
